...
                context.l10n.getByKey(state.confirmPassword.errorMessage),
            /* initialValue: state.confirmPassword.value, */
          ),
          SizedBox(
            width: context.width,
            child: CustomButton(
              buttonKey: const Key("register_button"),
              label: context.l10n.signUp,
              icon: Icon(Icons.login_rounded),
              isLoading: context.select(
                (AuthBloc bloc) => bloc.state.isCreating,
              ),
              onPressed: state.isPosting ? null : () => _register(context),
...
