...
                      children: [
                        Text(
                          "${context.l10n.notHaveAccount},",
                          style: context.textTheme.labelMedium,
                        ),
                        TextButton(
                          key: Key("go_to_register_screen"),
                          onPressed: () => context.pushNamed("register"),
                          child: Text(
                            context.l10n.createOneHere,
                            style: context.textTheme.labelMedium?.copyWith(
                              decoration: TextDecoration.underline,
                              fontWeight: AppTypography.semiBoldWeight,
...
